* fix for telneJunOSPing by Christian Hahn -- tobi

* fixed FPing regression created in r680 it broke the proper handling of old
  version of fping. Found by  Celedonio Miranda Torresano -- tobi

* first cut at mtr integration ... added new menuextra config item
  to build mtr links. -- tobi

* use localtime to construct the rawlog filename 
  --tobi as reported by Kent Kuriyama

* allow slave names to have . in them but not target sections. --tobi

2008/4/26 -- released version 2.3.6

* add custom style for active menu link
  -- tobi, patch by Daniel Rich drich employees.org

* honour the 'linkstyle' variable when zooming
  -- niko, reported by Wolfgang Tremmel as Debian bug #476404

* the 'ralf' fix for cgi which is not able to read the secrets file. -- tobi

* display "all the smoke" even when it gets cut at the top end of the graph
  --tobi

2008/3/29 -- released version 2.3.5

* make slaves kill their old children off before forking new ones when
  the configuration changes. Reported by David Behr. --niko

2008/3/28 -- released version 2.3.4

* fix 'loss_background' documentation. Reported by David Tomic. --niko

* fix local variable override handling in connection with nomasterpoll
  --niko

* add protocol level master/slave protocol to control upgrades --tobi

* fix ordering of menu entries again --tobi

* bail out if the master/slave shared secret file is world-readable
  or writable --niko

* add some security notes to the master/slave documentation --niko

* Switch message hash generation to Digest::HMAC_MD5 (bundled) since this
  prevents the extension attack. Note that this change requires that you
  upgrade client and server in sync (you should do that anyway, but
  especially because of this)! -- tobi

* make sure when loading the sortercache that we only load info about
  graphs presently in the config. --tobi

* optionally precreate the directory structure under 'dyndir' if
  'precreateperms' is set --niko
