@@ -1,3 +1,7 @@
+* added blazemode option to FPing, so that it sends an extra ping to
+  blaze a path to the destionation and then discarges it. Based on idea by
+  G.W. Haywood  -- tobi
+
 * fix for telneJunOSPing by Christian Hahn -- tobi
 
 * fixed FPing regression created in r680 it broke the proper handling of old
